--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     computer my freshman year of highschool.
                   </p>
                   <p class="lead">
-                    When I am not nose-deep in expanding my knowledge about computers and IoT, I enjoy going to the gym,
+                    When I am not expanding my knowledge about computers and IoT, I enjoy going to the gym,
                     traveling, playing chess, poker and videogames.
                   </p>
                 </div>
@@ -327,7 +327,7 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/cards.jpg" data-lightbox="gallery-mf">
+            <a href="https://github.com/jhartfie/BlackJackGame" data-lightbox="gallery-mf">
               <div class="work-img">
                 <img src="img/cards.jpg" alt="" class="img-fluid">
               </div>
@@ -351,7 +351,7 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/chart.jpg" data-lightbox="gallery-mf">
+            <a href="https://github.com/jhartfie/Stock-Market-Analysis" data-lightbox="gallery-mf">
               <div class="work-img">
                 <img src="img/chart.jpg" alt="" class="img-fluid">
               </div>
