--- a/html/ProjFive.html
+++ b/html/ProjFive.html
@@ -71,43 +71,63 @@
     <section>
       <p>
         <strong>GITHUB LINK:</strong>
-        <a
-          href="https://jhartfie.github.io/Path-Finding-Visualizer/"
-          target="_blank"
-          >https://jhartfie.github.io/Path-Finding-Visualizer/</a
+        <a href="https://github.com/jhartfie/RubiksCube" target="_blank"
+          >hhttps://github.com/jhartfie/RubiksCube</a
         >
       </p>
       <p>
-        This ReactJS project dynamically computes and displays the shortest path
-        possible. It also implementing sorting algorithms.
+        <strong>Rubik's Cube Solver and Visualizer</strong>
+        <div>
+        This project represents a culmination of my passion for problem-solving
+        and programming, manifesting in a comprehensive Rubik's Cube solver
+        developed in Python. At the heart of this application lies an
+        intelligent algorithm capable of flawlessly randomizing unsolved cubes,
+        then devising and presenting a step-by-step solution to restore the cube
+        to its solved state.</div>
+
+        <strong>Key Features:</strong><p></p>
+        <div><strong>Dynamic Randomization:</strong> The software starts by
+        generating a truly random, unsolved configuration for the Rubik's Cube,
+        ensuring a unique puzzle with each iteration. This feature tests the
+        solver's robustness and versatility by presenting it with a wide range
+        of challenges.</div><p></p>
+
+      <div><strong>Intuitive Solution Representation:</strong> After calculating
+        the optimal solution, the program meticulously prints out a series of
+        moves required to solve the cube. Each step is clearly articulated,
+        making it easy for users to follow and understand the logic behind the
+        solution.</div><p></p>
+
+      <div><strong>Interactive 3D Visualization:</strong> To bring the solution to
+        life, the project includes a 3D visualization tool that allows users to
+        interactively explore the cube. Users can rotate the cube through
+        click-and-hold gestures, offering a hands-on feel of the puzzle-solving
+        process.</div><p></p>
+
+      <div><strong>User Customization:</strong> Emphasizing user engagement, the
+        application provides multiple avenues for customization. Users can
+        manually alter the cube's configuration using keyboard shortcuts or
+        through an intuitive interface with clickable buttons. This feature
+        encourages exploration and experimentation, allowing users to test the
+        solver against manually created puzzles.</div><p></p>
+
+      <div><strong>Educational Tool:</strong> Beyond its capabilities as a solver,
+        this project serves as an educational platform for those interested in
+        the mathematics and algorithms behind Rubik's Cube solutions. It
+        demystifies complex problem-solving techniques and offers insights into
+        efficient algorithmic thinking. Through this project, I aimed to bridge
+        the gap between theoretical computer science principles and practical
+        application, showcasing my abilities in algorithm development, user
+        interface design, and interactive programming. This Rubik's Cube solver
+        stands as a testament to my dedication to creating engaging, functional,
+        and educational software solutions.</div><p></p>
       </p>
 
       <p>
-        Compute the shortest path from three search algorithms (BFS, DFS, A*).
-      </p>
-
-      <p>
-        Implemented sorting algorithms (Bubble, Merge, Radix, Quick Sort) to
-        traverse and sort randomly sized lines.
-      </p>
-
-      <p>
-        <strong>PICTURES OF PATH VISUALIZER: </strong>
+        <strong>PICTURES Rubiks Project: </strong>
       </p>
       <p>
-        <img src="../img/bfs1.png" width="200" height="200" alt="BFS" />
-        <img src="../img/bfs2.png" width="200" height="200" alt="BFS" />
-        <img src="../img/dfs1.png" width="200" height="200" alt="DFS" />
-        <img src="../img/dfs2.png" width="200" height="200" alt="DFS" />
-        <img src="../img/a1.png" width="200" height="200" alt="A*" />
-        <img src="../img/a2.png" width="200" height="200" alt="A*" />
-      </p>
-      <p>
-        <strong>PICTURES OF SORTING</strong>
-      </p>
-      <p>
-        <img src="../img/sort.png" width="500" height="200" alt="SORT" />
-        <img src="../img/bubble.png" width="500" height="200" alt="SORT" />
+        <img src="../img/rubik.png" width="400" height="400" alt="Rubiks" />
       </p>
     </section>
   </body>
