--- a/html/about.html
+++ b/html/about.html
@@ -98,16 +98,22 @@
                       About
                     </h5>
                   </div>
-                  <p class="lead">
-                    Hello, I'm Justin Hartfield, a Software Engineer based out of Phoenix, Arizona. I graduated from Arizona State University in May 2020 with a bachelor's degree in Computer Science. I have a passion for
-                    programming and all things technology. This portfolio is meant to showcase my projects and skills as
-                    a Software Engineer.
-                  <p class="lead">
-                    As you explore this portfolio, I invite you to delve into the intricacies of my projects, witness the evolution of my skills, and glimpse the mindset of a Software Engineer dedicated to shaping the future through code. Thank you for joining me on this journey—a journey fueled by passion, curiosity, and an unwavering commitment to the art and science of software engineering.
+                  <p style="font-size: 16px; color: #333; font-family: 'Arial', sans-serif;">
+                    Welcome! I’m <strong style="color: #007BFF;">Justin Hartfield</strong>, a passionate Software Engineer from Phoenix, Arizona. Since earning my bachelor's degree in Computer Science from Arizona State University in May 2020, I’ve been on a relentless quest to not just understand the code, but to master the art behind it. My journey in technology is driven by an insatiable curiosity and a deep-seated desire to make a lasting impact through my work.
                   </p>
-                  <p class="lead">
-                    Outside of the tech world, I enjoy going to the gym, traveling, playing chess, poker and videogames.
+                  <p style="font-size: 16px; color: #333; font-family: 'Arial', sans-serif;">
+                    This portfolio is a window into my world. It’s where I showcase the milestones of my professional journey, the projects that have challenged me, and the innovations I’ve brought to life. From intricate algorithms to scalable systems, each page here tells a story of dedication, learning, and the pursuit of excellence.
                   </p>
+                  <p style="font-size: 16px; color: #333; font-family: 'Arial', sans-serif;">
+                    Here, you’ll find more than just code. You’ll discover the essence of my approach to software engineering—a blend of analytical thinking, creative problem-solving, and a commitment to pushing the boundaries of what’s possible with technology. I invite you to explore my projects, understand the challenges I’ve embraced, and see the solutions I’ve engineered with passion and precision.
+                  </p>
+                  <p style="font-size: 16px; color: #333; font-family: 'Arial', sans-serif;">
+                    But life isn’t all about code. When I’m not behind a computer screen, I recharge by hitting the gym, exploring new destinations, and engaging in strategic games of chess and poker. I believe in a balanced life, where technology, health, and hobbies intersect to keep the mind sharp and the spirit vibrant.
+                  </p>
+                  <p style="font-size: 16px; color: #333; font-family: 'Arial', sans-serif;">
+                    Thank you for visiting my portfolio. Whether you’re a fellow engineer, a potential collaborator, or just curious, I hope you find inspiration and insight within these pages. Let’s connect and explore how we can shape the future together, one line of code at a time.
+                  </p>
+                  
                 </div>
               </div>
             </div>
