--- a/html/projects.html
+++ b/html/projects.html
@@ -202,12 +202,12 @@
           <div class="work-box">
             <a href="ProjFive.html">
               <div class="work-img">
-                <img src="../img/cards.jpg" alt="" class="img-fluid">
+                <img src="/img/rubik.png" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">BlackJack Game</h2>
+                    <h2 class="w-title">Rubiks Cube</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Python</span>
                     </div>
