--- a/html/skills.html
+++ b/html/skills.html
@@ -82,8 +82,7 @@
             <div class="service-content">
               <h2 class="s-title">Software Development</h2>
               <p class="s-description text-center">
-                Experienced in programming well designed, efficient, and user friendly code. Proficient in many languages and frameworks and able to quickly learn new technologies. Strong fundamentals in data structures and algorithms. 
-              </p>
+                Experienced in crafting well-designed, efficient, and user-friendly software solutions. I possess a strong proficiency in a broad range of programming languages and frameworks, enabling me to adapt and excel in diverse development environments. My foundational knowledge in data structures and algorithms ensures that I approach problems with efficiency and innovation at the forefront.              </p>
             </div>
           </div>
         </div>
@@ -95,8 +94,7 @@
             <div class="service-content">
               <h2 class="s-title">Web Development and Design</h2>
               <p class="s-description text-center">
-                I have experience designing and maintaing web sites from the ground up. This includes authorization and authentication as well as database management. Skilled in HTML, CSS, and JavaScript.
-              </p>
+                My journey in web development and design has equipped me with the skills to create and maintain robust websites from the ground up. I excel in implementing secure authorization and authentication systems, managing complex databases, and crafting responsive layouts. With a deep understanding of HTML, CSS, JavaScript, NextJS, Tailwind CSS, and modern frameworks, I ensure that web applications are not only functional but also visually appealing and user-friendly.              </p>
             </div>
           </div>
         </div>
@@ -106,10 +104,9 @@
               <span class="ico-circle"><i class="ion-android-phone-portrait"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Soft Skills</h2>
+              <h2 class="s-title">Cloud Computing and DevOpS</h2>
               <p class="s-description text-center">
-                One of the most important parts of being a software developer is being able to write code. Being able to explain your program and how it works is the second most important skill. When working in a team environment the ability to cultivate your idea to a group is absolutely vital.
-                <!-- When working in a team environment the ability to cultivate your idea to a group is absolutely vital.-->
+                In the ever-evolving landscape of cloud computing and DevOps, I have honed my skills to architect scalable and resilient cloud infrastructure. My expertise encompasses managing cloud services, automating deployment pipelines, and ensuring continuous integration and delivery (CI/CD) practices. Familiar with leading cloud platforms such as AWS, Azure, and Google Cloud, I leverage these technologies to optimize workflows, enhance system reliability, and drive operational excellence.                <!-- When working in a team environment the ability to cultivate your idea to a group is absolutely vital.-->
               </p>
             </div>
           </div>
