--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <!-- Main Stylesheet File -->
     <link href="css/style.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   </head>
 
   <body id="page-top">
@@ -66,11 +67,18 @@
       </div>
     </nav>
 
-    <div
-      id="home"
-      class="intro route bg-image"
-      style="background-image: url(img/backgroun.jpeg)"
-    >
+    <div id="home" class="intro route bg-image">
+      <div
+        id="particles-js"
+        style="
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          top: 0;
+          left: 0;
+          z-index: 0;
+        "
+      ></div>
       <div class="overlay-itro"></div>
       <meta charset="utf-8" />
       <div class="intro-content display-table">
@@ -132,5 +140,6 @@
     <script src="contactform/contactform.js"></script>
 
     <script src="js/main.js"></script>
+    <script src="particles-config.js"></script>
   </body>
 </html>
